# opurs

./: .gitignore  BENCHMARKS.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Makefile.toml  README.md  SESSION_HANDOFF.md  SIMD_FIXUP_STATUS.md  diff_review.md  simd_diff.md
.claude/: settings.local.json
.config/: nextest.toml
.github/workflows/: ci.yml  fuzz.yml  test.yml
benches/: codec.rs  codec_comparison.rs  comparison.rs  dnn.rs  dnn_codec.rs  dnn_comparison.rs  multistream.rs  pitch.rs  projection.rs  silk.rs  vq.rs
examples/: c_only_decode_check.rs  debug_encode.rs  dnn_codegen.rs  dnn_comparison.rs  float_decode_compare.rs  multistream_demo.rs  opus_compare.rs  opus_demo.rs  repacketizer_demo.rs  run_vectors2.rs
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/extensions_fuzzer/: declared_len_overflow  padding_chain_malformed  repeat_ext_edge
fuzz/fuzz_targets/: decode_fuzzer.rs  extensions_fuzzer.rs
libopus-sys/: Cargo.toml  README.md  build.rs
libopus-sys/opus/celt/: bands.c  celt_decoder.c  vq.c
libopus-sys/src/: lib.rs  osce_test_harness.c  wrapper.h  write_weights_blob.c
plans/: PLAN.md  active-workstreams.md  api-expansion-upstream-parity.md  deferred-multistream.md  diff_review.md  fix-g1-qext-correctness.md  fix-g2-extensions-repacketizer.md  fix-g3-public-api-parity.md  fix-g4-dnn-dred-osce.md  fix-g5-simd-dispatch-build.md  fix-g6-docs-version-metadata.md  fix-g7-runtime-semantics.md  missing-impl-test-coverage.md  parity-test-fail-first.md  perf-status.md  phase1-test-expansion.md  phase2-celt-safety.md  phase3-silk-safety.md  phase4-integration-safety.md  phase5-performance.md  remaining-plan.md  remove-all-unsafe.md  simd_diff.md  upgrade-1.6.1.md  upstream-comment-port.md  upstream-tests-full-match.md
plans/archive/: README.md  SIMD_FIXUP_STATUS.md  deferred-multistream.md
plans/done/: README.md  fix-g3-public-api-parity.md  phase1-test-expansion.md  phase3-silk-safety.md  upgrade-1.6.1.md  upstream-reference-audit-2026-02-27.md  upstream-tests-full-match.md
scripts/: check_upstream_refs.sh  criterion_multistream_summary.sh  criterion_projection_summary.sh  ensure_extended_vectors.sh
src/: arch.rs  enums.rs  error.rs  lib.rs
src/api/: enums.rs  error.rs  mod.rs
src/celt/: bands.rs  celt.rs  celt_decoder.rs  celt_encoder.rs  celt_lpc.rs  common.rs  cwrs.rs  entcode.rs  entdec.rs  entenc.rs  float_cast.rs  kiss_fft.rs  laplace.rs  mathops.rs  mdct.rs  mod.rs  modes.rs  pitch.rs  quant_bands.rs  rate.rs  vq.rs
src/celt/modes/: data_96000.rs  static_modes_float_h.rs
src/celt/simd/: aarch64.rs  mod.rs  x86.rs
src/celt/tests/: test_unit_cwrs32.rs  test_unit_dft.rs  test_unit_entropy.rs
src/dnn/: README.md  burg.rs  fargan.rs  freq.rs  lpcnet.rs  lpcnet_tables.rs  mod.rs  nndsp.rs  nnet.rs  osce.rs  osce_lace_data.rs  pitchdnn.rs  pitchdnn_data.rs  plc_data.rs  vec.rs  weights.rs
src/dnn/dred/: coding.rs  config.rs  decoder.rs  encoder.rs  mod.rs  rdovae_dec.rs  rdovae_enc.rs  stats.rs
src/dnn/simd/: aarch64.rs  mod.rs  x86.rs
src/opus/: analysis.rs  extensions.rs  mapping_matrix.rs  mod.rs  opus_decoder.rs  opus_defines.rs  opus_encoder.rs  opus_multistream.rs  opus_multistream_decoder.rs  opus_multistream_encoder.rs  opus_private.rs  opus_projection_decoder.rs  opus_projection_encoder.rs  packet.rs  projection_matrices.rs  repacketizer.rs
src/opus/mlp/: analysis_mlp.rs  layers.rs  mod.rs  tansig.rs
src/silk/: A2NLSF.rs  CNG.rs  HP_variable_cutoff.rs  Inlines.rs  LPC_analysis_filter.rs  LPC_fit.rs  LPC_inv_pred_gain.rs  LP_variable_cutoff.rs  NLSF2A.rs  NLSF_VQ.rs  NLSF_VQ_weights_laroia.rs  NLSF_decode.rs  NLSF_del_dec_quant.rs  NLSF_encode.rs  NLSF_stabilize.rs  NLSF_unpack.rs  NSQ.rs  NSQ_del_dec.rs  PLC.rs  SigProc_FIX.rs  VAD.rs  VQ_WMat_EC.rs  ana_filt_bank_1.rs  biquad_alt.rs  bwexpander.rs  bwexpander_32.rs  check_control_input.rs  code_signs.rs  control_SNR.rs  control_audio_bandwidth.rs  control_codec.rs  debug.rs  dec_API.rs  decode_core.rs  decode_frame.rs  decode_indices.rs  decode_parameters.rs  decode_pitch.rs  decode_pulses.rs  decoder_set_fs.rs  (+37 more)
src/silk/float/: LPC_analysis_filter_FLP.rs  LTP_analysis_filter_FLP.rs  LTP_scale_ctrl_FLP.rs  SigProc_FLP.rs  apply_sine_window_FLP.rs  autocorrelation_FLP.rs  burg_modified_FLP.rs  bwexpander_FLP.rs  corrMatrix_FLP.rs  encode_frame_FLP.rs  energy_FLP.rs  find_LPC_FLP.rs  find_LTP_FLP.rs  find_pitch_lags_FLP.rs  find_pred_coefs_FLP.rs  inner_product_FLP.rs  k2a_FLP.rs  mod.rs  noise_shape_analysis_FLP.rs  pitch_analysis_core_FLP.rs  process_gains_FLP.rs  residual_energy_FLP.rs  scale_copy_vector_FLP.rs  schur_FLP.rs  sort_FLP.rs  structs_FLP.rs  warped_autocorrelation_FLP.rs  wrappers_FLP.rs
src/silk/resampler/: ar2.rs  down2.rs  down2_3.rs  mod.rs  (+4 more)
src/src/: analysis.rs  opus.rs  opus_decoder.rs  opus_encoder.rs  opus_private.rs  repacketizer.rs
src/tools/: compare.rs  mod.rs
src/util/: mod.rs  nalgebra.rs
tests/: audio_20k_window_debug.rs  celt_cwrs32.rs  celt_dft.rs  celt_entropy.rs  celt_laplace.rs  celt_mathops.rs  celt_mdct.rs  celt_rotation.rs  celt_types.rs  ctl_api_controls.rs  dnn_integration.rs  dnn_weights.rs  dred_decode_parity.rs  dred_upstream_port.rs  encoder_comparison.rs  extensions_fuzzer_regressions.rs  extensions_repacketizer_parity.rs  extensions_upstream_port.rs  opus_api.rs  opus_custom_api.rs  opus_custom_upstream_port.rs  opus_decode.rs  opus_encode.rs  opus_encode_regressions_upstream.rs  opus_multistream_api.rs  opus_multistream_packet.rs  opus_padding.rs  opus_projection_decoder.rs  opus_projection_decoder_api.rs  opus_projection_encoder.rs  opus_projection_encoder_api.rs  opus_projection_upstream_port.rs  osce_nndsp.rs  packet_has_lbrr_parity.rs  packet_parse_impl_parity.rs  pitch_c_parity.rs  pvq_sse2_parity.rs  qext_parity.rs  restricted_application_parity.rs  rld_prediction_debug.rs  (+4 more)
tests/opus_encode/: main.rs  opus_encode_regressions.rs
tests/test_common/: mod.rs
tools/: Cargo.toml
unsafe-libopus-tools/: Cargo.toml
unsafe-libopus-tools/src/: compare.rs
upstream-libopus/: Cargo.toml
upstream-libopus/src/: lib.rs
(+14 files in other folders)
