[package]
name = "opurs"
authors = ["DCNick3", "Friedel Ziegelmayer"]
version = "0.3.0"
edition = "2021"

repository = "https://github.com/dignifiedquire/opurs"
description = "Pure Rust Opus codec, bit-exact with libopus 1.5.2"

license = "BSD-3-Clause"

[workspace]
members = [
    "libopus-sys",
]

[profile.release]
debug = true

[dependencies]
# for complex numbers impl
num-traits = "0.2.16"
num-complex = { version = "0.4.1", features = ["bytemuck"] }

# for casting slices between different types
bytemuck = "1.16.1"

# for slicing arrays to other arrays
arrayref = "0.3.7"
const-chunks = "0.3.0"

# better abstractions for multidimensional arrays
ndarray = "0.15.6"
# better abstractions for multidimensional arrays, another crate (I should probably choose one 💀)
nalgebra = "0.33.0"

# iterate over stuff
itertools = "0.13.0"

# idiomatic error types
thiserror = "2"

# for dumping data in ent-dump
hex = { version = "0.4.3", optional = true }

# tools feature dependencies (optional)
libopus-sys = { path = "libopus-sys", optional = true }
byteorder = { version = "1.4", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
rayon = { version = "1.7", optional = true }
indicatif = { version = "0.17", features = ["rayon"], optional = true }

[dev-dependencies]
getrandom = "0.2.15"
insta = "1.29.0"

[features]
# dumps calls to entropy coder to console for easier upstream divergence debugging
# (it's not _only_ entropy coder actually, there are some additional prints where it was found necessary)
ent-dump = ["hex"]

# testing and comparison tools (enables examples that depend on upstream C libopus)
tools = ["dep:libopus-sys", "dep:byteorder", "dep:clap", "dep:rayon", "dep:indicatif"]

# DNN features (neural audio processing)
deep-plc = []          # Deep PLC: nnet + freq + burg + pitchdnn + fargan + lpcnet
dred = ["deep-plc"]    # DRED: deep-plc + rdovae + extensions + dred enc/dec
osce = ["deep-plc"]    # OSCE: deep-plc + nndsp + lace/nolace
dnn = ["deep-plc", "dred", "osce"]  # All DNN features
builtin-weights = ["deep-plc"]  # Compile ~4.7MB of weight data into the binary

# Pass DNN features through to libopus-sys (for tools that need C weight data)
tools-dnn = ["tools", "dnn", "builtin-weights", "libopus-sys/dnn"]

[[example]]
name = "run_vectors2"
required-features = ["tools"]

[[example]]
name = "opus_demo"
required-features = ["tools"]

[[example]]
name = "opus_compare"
required-features = ["tools"]

[[example]]
name = "repacketizer_demo"
required-features = ["tools"]

[[example]]
name = "dnn_codegen"
required-features = ["tools-dnn"]

[[example]]
name = "dnn_comparison"
required-features = ["tools-dnn"]
