[package]
name = "opurs"
authors = ["DCNick3", "Friedel Ziegelmayer"]
version = "0.3.0"
edition = "2021"
rust-version = "1.70"

repository = "https://github.com/dignifiedquire/opurs"
description = "Pure Rust Opus codec, bit-exact with libopus 1.6.1"

license = "BSD-3-Clause"

[workspace]
members = [
    "libopus-sys",
]

[profile.release]
debug = true

[profile.bench]
lto = "thin"
codegen-units = 1
debug = true

[dependencies]
# for complex numbers impl
num-traits = "0.2.16"
num-complex = { version = "0.4.1", features = ["bytemuck"] }

# for casting slices between different types
bytemuck = "1.16.1"

# for slicing arrays to other arrays
arrayref = "0.3.7"
const-chunks = "0.3.0"

nalgebra = "0.33.0"

# iterate over stuff
itertools = "0.13.0"

# idiomatic error types
thiserror = "2"

# runtime CPU feature detection for SIMD dispatch
cpufeatures = { version = "0.2", optional = true }

# for dumping data in ent-dump
hex = { version = "0.4.3", optional = true }

# tools feature dependencies (optional)
libopus-sys = { path = "libopus-sys", optional = true }
byteorder = { version = "1.4", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
rayon = { version = "1.7", optional = true }
indicatif = { version = "0.17", features = ["rayon"], optional = true }

[dev-dependencies]
getrandom = "0.2.15"
insta = "1.29.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pitch"
harness = false

[[bench]]
name = "silk"
harness = false

[[bench]]
name = "vq"
harness = false

[[bench]]
name = "comparison"
harness = false
required-features = ["tools"]

[[bench]]
name = "codec"
harness = false

[[bench]]
name = "codec_comparison"
harness = false
required-features = ["tools"]

[[bench]]
name = "multistream"
harness = false
required-features = ["tools"]

[[bench]]
name = "projection"
harness = false
required-features = ["tools"]

[[bench]]
name = "dnn"
harness = false
required-features = ["deep-plc"]

[features]
default = ["simd"]

# SIMD acceleration via platform intrinsics (SSE/AVX on x86, NEON on aarch64)
# When tools is also enabled, forwards simd to libopus-sys for C SIMD compilation
simd = ["dep:cpufeatures", "libopus-sys?/simd"]

# dumps calls to entropy coder to console for easier upstream divergence debugging
# (it's not _only_ entropy coder actually, there are some additional prints where it was found necessary)
ent-dump = ["hex"]

# testing and comparison tools (enables examples that depend on upstream C libopus)
tools = ["dep:libopus-sys", "dep:byteorder", "dep:clap", "dep:rayon", "dep:indicatif"]

# DNN features (neural audio processing)
deep-plc = []          # Deep PLC: nnet + freq + burg + pitchdnn + fargan + lpcnet
dred = ["deep-plc"]    # DRED: deep-plc + rdovae + extensions + dred enc/dec
osce = ["deep-plc"]    # OSCE: deep-plc + nndsp + lace/nolace
dnn = ["deep-plc", "dred", "osce"]  # All DNN features
builtin-weights = ["deep-plc"]  # Compile ~4.7MB of weight data into the binary
osce-dump-debug = ["osce"]  # Dump OSCE intermediates for debugging

# Quality Extension (Opus HD): 96 kHz support, extended bandwidth, 32-bit samples
qext = []

# Pass DNN features through to libopus-sys (for tools that need C weight data)
tools-dnn = ["tools", "dnn", "builtin-weights", "libopus-sys/dnn"]
# Match upstream FUZZING behavior (random arch downgrade and codec randomization).
fuzzing = ["libopus-sys?/fuzzing"]

[[example]]
name = "run_vectors2"
required-features = ["tools"]

[[example]]
name = "opus_demo"
required-features = ["tools"]

[[example]]
name = "opus_compare"
required-features = ["tools"]

[[example]]
name = "repacketizer_demo"
required-features = ["tools"]

[[example]]
name = "dnn_codegen"
required-features = ["tools-dnn"]

[[example]]
name = "dnn_comparison"
required-features = ["tools-dnn"]

[[example]]
name = "float_decode_compare"
required-features = ["tools"]

[[example]]
name = "c_only_decode_check"
required-features = ["tools"]

[[example]]
name = "debug_encode"
required-features = ["tools"]
