[package]
name = "opurs-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.opurs]
path = ".."
features = ["fuzzing", "qext"]

[workspace]
members = ["."]

[[bin]]
name = "decode_fuzzer"
path = "fuzz_targets/decode_fuzzer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "extensions_fuzzer"
path = "fuzz_targets/extensions_fuzzer.rs"
test = false
doc = false
bench = false
