[package]
name = "libopus-sys"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
publish = false

[dependencies]

[build-dependencies]
cc = "1.2"
bindgen = { version = "0.72", optional = true }

[features]
default = []
generate_binding = ["bindgen"]
# SIMD intrinsics (SSE/SSE2/SSE4.1/AVX2 on x86, NEON on aarch64)
simd = []
# DNN features — require weight data: `cargo make download-dnn-data`
deep-plc = []
dred = ["deep-plc"]
osce = ["deep-plc"]
dnn = ["deep-plc", "dred", "osce"]
fuzzing = []
